--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
           <a href="{{ site.baseurl }}/">Home</a>
           <a href="{{ site.baseurl }}/about">About</a>
           <a href="{{ site.baseurl }}/projects">Projects</a>
-          <!-- <a href="{{ site.baseurl }}/blog">Blog</a> -->
+          <a href="{{ site.baseurl }}/blog">Blog</a>
           <a class="navlink-contact" href="{{ site.baseurl }}/contact">Contact</a>
         </nav>
       </div>
