--- a/css/blog_focus.css
+++ b/css/blog_focus.css
@@ -15,7 +15,7 @@
   margin: 0 auto;
   margin-top: 20%;
   max-width: 750px;
-  color: #fff;
+  color: #6D6A6A;
 }
 .focus-post-date{
   font-style: italic;
