small change. hanging html tag.

--- a/_layouts/blog_post_focus.html
+++ b/_layouts/blog_post_focus.html
@@ -38,7 +38,8 @@
             </p>
 
             {{ content }}
-
+      <br><br><br>
+      </section>
 
       <footer>
         <p>{{site.yourname}} {{site.year}} //
