--- a/_layouts/blog_post_focus.html
+++ b/_layouts/blog_post_focus.html
@@ -52,7 +52,7 @@
       <script src="{{ site.baseurl }}/js/vendor/jquery-1.11.3.min.js"></script>
       <script src="{{ site.baseurl }}/js/main.js"></script>
 
-      <!-- <script>
+      <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -61,7 +61,7 @@
         ga('create', 'UA-1111502-22', 'auto');
         ga('send', 'pageview');
 
-      </script> -->
+      </script>
       <script type="text/javascript">
       function fader() {
         var r = $('.blurred'),
