--- a/_layouts/blog_post_focus.html
+++ b/_layouts/blog_post_focus.html
@@ -18,11 +18,13 @@
   </head>
   <body>
     <div class="image-wrap">
-      <div class="header-img" style="background:url(/assets/img/blog/walk-through-sf-lg.jpg) no-repeat center center; background-size: cover;">
+      <div class="header-img" style="background:url(/assets/img/blog/{{page.headerimg}}) no-repeat center center; background-size: cover;">
         <div class="title-etc">
+          {% if page.overlaytitle %}
           <h1>{{page.title}}</h1>
           <p class="focus-post-date">{{ page.date | date: "%B %d, %Y" }}
           </p>
+          {% endif %}
         </div>
 
       </div>
@@ -36,6 +38,10 @@
               <span class="tag">{{tag}}</span>
               {% endfor %}
             </p>
+            {% if page.overlaytitle != true %}
+            <p class="focus-post-date">{{ page.date | date: "%B %d, %Y" }}
+            </p>
+            {% endif %}
 
             {{ content }}
       <br><br><br>
