--- a/_layouts/blog_post_focus.html
+++ b/_layouts/blog_post_focus.html
@@ -4,7 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title> {% if page.title %} {{ page.title }} | {% endif %} {{site.title}} </title>
-    <meta name="description" content="">
+    <meta name="description" content="{{page.teaser}}">
+
+    <meta property="og:image" content="{{page.og.image}}">
+    <meta property="og:title" content="{{page.title}}">
+    <meta property="og:type" content="{{page.og.type}}">
+    <meta property="og:url" content="{{page.og.url}}">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}{{site.img_dir}}favicon.ico">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/normalize.css">
