--- a/_layouts/blog_post_focus.html
+++ b/_layouts/blog_post_focus.html
@@ -10,6 +10,7 @@
     <meta property="og:title" content="{{page.title}}">
     <meta property="og:type" content="{{page.og.type}}">
     <meta property="og:url" content="{{page.og.url}}">
+    <meta property="og:description" content="{{page.teaser}}">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}{{site.img_dir}}favicon.ico">
