--- a/_layouts/blog_post_focus.html
+++ b/_layouts/blog_post_focus.html
@@ -26,13 +26,15 @@
   <body>
     <div class="image-wrap">
       <div class="header-img" style="background:url(/assets/img/blog/{{page.headerimg}}) no-repeat center center; background-size: cover;">
-        <div class="title-etc">
-          {% if page.overlaytitle %}
-          <h1>{{page.title}}</h1>
+        {% if page.overlaytitle %}
+        <div class="title-etc" {% if page.overlaycolor %}style="color: {{page.overlaycolor}}"{% endif %}>  
+          <h1>
+            {{page.title}}
+          </h1>
           <p class="focus-post-date">{{ page.date | date: "%B %d, %Y" }}
           </p>
-          {% endif %}
         </div>
+        {% endif %}
 
       </div>
     </div>
