remove mailto for spam prevention

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -28,7 +28,7 @@ layout: default
       <ul>
         <li><i class="fa fa-twitter fa-fw"></i> Twitter: <a href="https://twitter.com/{{site.contact.twitter}}">@{{site.contact.twitter}} on Twitter</a>
         <li><i class="fa fa-github fa-fw"></i> Github: <a href="http://github.com/{{site.contact.github}}">{{site.contact.github}} on Github</a>
-        <li><i class="fa fa-envelope fa-fw"></i> Email: <a href="mailto:{{site.contact.email}}">{{site.contact.email}}</a>
+        <li><i class="fa fa-envelope fa-fw"></i> Email: {{site.contact.email}}
       </ul>
 
     </div>
